--- a/report/sections/contextualizacao.tex
+++ b/report/sections/contextualizacao.tex
@@ -3,15 +3,15 @@ O \textit{standard} ISO/IEC (\textit{International Organization for Standardizat
 Compliant Driving Licence} e é constituído pelas seguintes partes:
 
 \begin{itemize}
-	\item \textbf{Parte 1} -- \texttt{Physical Characteristics and Basic Data Set}: descreve as características físicas, o conjunto básico de elementos de dados, o \textit{layout} visual e as capacidades de segurança física (recursos legíveis pelo ser humano) de uma \textit{ISO-compliant driving licence} (IDL);
-	\item \textbf{Parte 2} -- \texttt{Machine-Readable Technologies}: descreve as tecnologias, legíveis por máquina, que podem ser utilizadas por este \textit{standard}, incluindo a estrutura de dados lógica e o mapeamento de dados por cada tecnologia;
-	\item \textbf{Parte 3} -- \texttt{Access Control, Authentication and Integrity Validation}: descreve as capacidades de segurança eletrónica que podem incorporar este \textit{standard}, incluindo mecanismos para controlo de acesso aos dados, verificação da origem de uma IDL e confirmação da integridade dos dados;
+	\item \textbf{Parte 1} -- \texttt{Physical Characteristics and Basic Data Set} \cite{iso_1}: descreve as características físicas, o conjunto básico de elementos de dados, o \textit{layout} visual e as capacidades de segurança física (recursos legíveis pelo ser humano) de uma \textit{ISO-compliant driving licence} (IDL);
+	\item \textbf{Parte 2} -- \texttt{Machine-Readable Technologies} \cite{iso_2}: descreve as tecnologias, legíveis por máquina, que podem ser utilizadas por este \textit{standard}, incluindo a estrutura de dados lógica e o mapeamento de dados por cada tecnologia;
+	\item \textbf{Parte 3} -- \texttt{Access Control, Authentication and Integrity Validation} \cite{iso_3}: descreve as capacidades de segurança eletrónica que podem incorporar este \textit{standard}, incluindo mecanismos para controlo de acesso aos dados, verificação da origem de uma IDL e confirmação da integridade dos dados;
 	\item \textbf{Parte 4} -- \texttt{Test Methods}: descreve métodos de teste que podem ser utilizados para determinar se uma IDL está de acordo com os requisitos das tecnologias legíveis por máquinas especificadas na parte 2 e com as capacidades de segurança eletrónica especificadas na parte 3.
 \end{itemize}
 
 Este \textit{standard} cria uma base comum para a utilização internacional e reconhecimento mútuo da IDL, sem impedir que países ou estados apliquem as suas regras de privacidade e que autoridades nacionais/comunitárias/regionais de trânsito tratem das suas necessidades específicas.
 
-A \textbf{Parte 5} do ISO/IEC 18013 -- \texttt{Mobile Driving Licence} -- pretende estabelecer um \textit{standard} de especificações de interface para a implementação de cartas de condução associadas a dispositivos móveis (\textit{Mobile Driving License} - mDL). Assim, esta parte descreve a interface e requisitos físicos e funcionais associados, que possibilitam a utilização de dispositivos móveis pelo titular da carta de condução, para a fornecer a um verificador, facilitando o acesso do mesmo a informação da carta de condução.
+A \textbf{Parte 5} do ISO/IEC 18013 -- \texttt{Mobile Driving Licence} \cite{iso_5} -- pretende estabelecer um \textit{standard} de especificações de interface para a implementação de cartas de condução associadas a dispositivos móveis (\textit{Mobile Driving License} - mDL). Assim, esta parte descreve a interface e requisitos físicos e funcionais associados, que possibilitam a utilização de dispositivos móveis pelo titular da carta de condução, para a fornecer a um verificador, facilitando o acesso do mesmo a informação da carta de condução.
 
 Neste contexto, considera-se que dispositivos móveis são os dispositivos eletrónicos com interface de utilizador e a capacidade de armazenar informação da mDL e de a partilhar com um leitor, após instrução do titular -- \textit{smartphones}, \textit{wearables}, entre outros. Um leitor mDL é um dispositivo portátil ou computador, que pode trocar dados com uma mDL, enquanto que o titular da mDL é o indivíduo para quem a mDL é emitida, isto é, o titular legítimo dos privilégios de condução refletidos na mDL.
 
