--- a/report/sections/estrutura_dados.tex
+++ b/report/sections/estrutura_dados.tex
@@ -101,18 +101,22 @@ Este ficheiro elementar contém os dados demográficos do titular, bem como as c
 De tal modo, sabendo que cada campo de tamanho variável é precedido pelo respetivo valor de comprimento, os dados demográficos seguem a seguinte estrutura:
 
 \begin{table}[H]
+\centering
+\caption{Dados armazenados no DG1.}
+\label{table:grupos_dados_1}
+\vspace{0.2cm}
 \begin{tabular}{|c|c|c|c|}
 \hline
 \rowcolor[HTML]{EFEFEF} 
-{\color[HTML]{333333} Nome} & {\color[HTML]{333333} \begin{tabular}[c]{@{}c@{}}Tamanho Variável/\\ Fixo\end{tabular}} & {\color[HTML]{333333} Formato} & {\color[HTML]{333333} Exemplo} \\ \hline
-Nome Próprio & Variável & Até 36 letras e/ou símbolos & Smithe-Williams \\ \hline
-Apelidos & Variável & Até 36 letras e/ou símbolos & Alexander George Thomas \\ \hline
+Nome & \begin{tabular}[c]{@{}c@{}}Tamanho\\Variável/\\Fixo\end{tabular} & Formato & Exemplo \\ \hline
+Nome Próprio & Variável & \begin{tabular}[c]{@{}c@{}}Até 36 letras\\ e/ou símbolos\end{tabular} & Smithe-Williams \\ \hline
+Apelidos & Variável & \begin{tabular}[c]{@{}c@{}}Até 36 letras\\ e/ou símbolos\end{tabular} & Alexander George Thomas \\ \hline
 \begin{tabular}[c]{@{}c@{}}Data de nascimento\\ (yyyymmdd)\end{tabular} & Fixo & 8 números & 19700301 \\ \hline
 \begin{tabular}[c]{@{}c@{}}Data de emissão\\ (yyyymmdd)\end{tabular} & Fixo & 8 números & 20020915 \\ \hline
 \begin{tabular}[c]{@{}c@{}}Data de expiração\\ (yyyymmdd)\end{tabular} & Fixo & 8 números & 20070930 \\ \hline
 País emissor & Fixo & 3 letras & JPN \\ \hline
-Autoridade emissora & Variável & Até 65 letras, números e/ou símbolos & \begin{tabular}[c]{@{}c@{}}HOKKAIDO PREFECTURAL \\ POLICE ASAHIKAWA AREA\\ PUBLIC SAFETY COMMISSION\end{tabular} \\ \hline
-Número de licença & Variável & Até 65 letras e/ou números & A290654395164273X \\ \hline
+Autoridade emissora & Variável & \begin{tabular}[c]{@{}c@{}}Até 65 letras, \\números e/ou \\símbolos\end{tabular} & \begin{tabular}[c]{@{}c@{}}HOKKAIDO PREFECTURAL \\ POLICE ASAHIKAWA AREA\\ PUBLIC SAFETY COMMISSION\end{tabular} \\ \hline
+Número de licença & Variável & \begin{tabular}[c]{@{}c@{}}Até 65 letras\\ e/ou números\end{tabular} & A290654395164273X \\ \hline
 \end{tabular}
 \end{table}
 
@@ -125,9 +129,13 @@ Por sua vez, cada uma das qualificações de veículo é codificada com a \texti
 Este grupo é responsável pelo armazenamento de uma variedade de identificadores biométricos do titular. No entanto, por motivos de simplicidade, assume-se que apenas a foto estará presente. Este ficheiro é identificado pela \textit{tag} \texttt{'75'} e o identificador \texttt{'06'}, seguido pelo comprimento total do grupo. A seguir segue a seguinte formatação:
 
 \begin{table}[H]
+\centering
+\caption{Dados armazenados no DG6.}
+\label{table:grupos_dados_6}
+\vspace{0.2cm}
 \begin{tabular}{|c|c|c|}
 \hline
-\rowcolor[HTML]{C0C0C0} 
+\rowcolor[HTML]{EFEFEF}
 Tag & Comprimento & Valor \\ \hline
 '7461' & Variável & Informação dos subgrupos biométricos \\ \hline
 '02' & Variável & \begin{tabular}[c]{@{}c@{}}Número de subgrupos biométricos do grupo\\ \\ (no contexto do Projeto, 1)\end{tabular} \\ \hline
@@ -148,9 +156,13 @@ Tag & Comprimento & Valor \\ \hline
 Este grupo é responsável por guardar os dados obrigatórios mDL, sendo identificado pela \textit{tag} \texttt{'62'} e o identificador \texttt{'0A'}, seguido pelo comprimento total do grupo. Seguem-se então os seguintes parâmetros:
 
 \begin{table}[H]
+\centering
+\caption{Dados armazenados no DG10.}
+\label{table:grupos_dados_10}
+\vspace{0.2cm}
 \begin{tabular}{|c|c|c|}
 \hline
-\rowcolor[HTML]{C0C0C0} 
+\rowcolor[HTML]{EFEFEF} 
 Tag & Comprimento & Valor \\ \hline
 02 & 01 & Versão do mDL \\ \hline
 '5F28' & 07 & \begin{tabular}[c]{@{}c@{}}Data do último update. Timestamp em UTC,\\  no formato YYYYMMDDhhmmss\end{tabular} \\ \hline
@@ -167,10 +179,14 @@ Este grupo de dados é responsável pelo armazenamento da versão da estrutura d
 
 \begin{table}[H]
 \centering
+\caption{Dados armazenados no EF.com}
+\label{table:grupos_dados_ef_com}
+\vspace{0.2cm}
+\centering
 \resizebox{\textwidth}{!}{%
 \begin{tabular}{|c|c|c|}
 \hline
-\rowcolor[HTML]{C0C0C0} 
+\rowcolor[HTML]{EFEFEF} 
 Tag & Comprimento & Valor \\ \hline
 '5F01' & Variável & \begin{tabular}[c]{@{}c@{}}Número da versão em formato 'aabb', no qual 'aa' define o maior nível \\ de revisão e 'bb' define o nível de lançamento. Ambos são numéricos\\ e codificados como 2 bytes em formato BCD.\end{tabular} \\ \hline
 '5C' & Variável & A lista de tags de grupos de dados. \\ \hline
