--- a/report/sections/requisitos.tex
+++ b/report/sections/requisitos.tex
@@ -41,7 +41,7 @@ leitor mDL, que são especificados nesta parte do ISO/IEC 18013, nomeadamente:
 		\begin{itemize}
 			\item Inclusão obrigatória da imagem facial do titular.
 			\item Elementos de dados adicionais para ``Up to Date info''.
-			\item \hl{Identificador adicional que indica o fator de forma.}
+			\item Identificador adicional que indica o fator de forma.
 			\item Grupos de dados mDL, utilizados para transferência de informação seletiva (inclui novos elementos de dados).
 		\end{itemize}
 	\end{itemize}
